# helic-daq

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bbb-daq.md  notes.md
.github/workflows/: ci.yml
cbc-core/: Cargo.toml
cbc-core/src/: controller.rs  fourier.rs  pid.rs
cbc-drivers/: Cargo.toml
cbc-drivers/src/: ad5064.rs  ad7608.rs  ad7609.rs  lib.rs
cbc-proto/: Cargo.toml
cbc-proto/src/: crc.rs  frame.rs  lib.rs  stream.rs
docs/: broker.md  developer_guide.md  embassy_time_alarm_loss.md  hawk-rig.md  ild1420-isl3177e.md  implementation_plan.md  multi_experiment_plan.md  overrun_handoff.md  periodic_signal_generator.md  protocol.md  rt_program_proposal.md  user_guide.md
firmware/: Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/common/: Cargo.toml  build.rs
firmware/common/src/: analog_spi.rs  laser.rs  lib.rs  params.rs  pulse_pio.rs  raw_pio.rs  rig.rs  rt_loop.rs  rt_mem.rs  ssi_pio.rs  table.rs  time_watchdog.rs
firmware/common/src/comms/: beacon.rs  mod.rs  tcp.rs  udp.rs
firmware/common/src/net/: cyw43.rs  mod.rs  wiznet.rs
firmware/common/src/params/: schema.rs
firmware/experiments/cbc-rig/: Cargo.toml  README.md  build.rs  memory.x
firmware/experiments/cbc-rig/src/: board.rs  config.rs  main.rs  rig.rs  rt_loop.rs  telemetry.rs
firmware/experiments/encoder-rig/: Cargo.toml  README.md  build.rs
firmware/experiments/encoder-rig/src/: board.rs  config.rs  main.rs  rt_loop.rs
firmware/experiments/pico2w-rig/: Cargo.toml  README.md  build.rs  memory.x
firmware/experiments/pico2w-rig/src/: board.rs  config.rs  main.rs  rig.rs  telemetry.rs
firmware/experiments/pwm-rig/: Cargo.toml  README.md  memory.x
firmware/experiments/pwm-rig/src/: board.rs  config.rs  main.rs  rt_loop.rs
firmware/experiments/sig-gen/: Cargo.toml  README.md
firmware/experiments/sig-gen-w/: Cargo.toml  README.md  build.rs
firmware/experiments/sig-gen-w/src/: board.rs  config.rs  main.rs  rig.rs  rt_loop.rs
firmware/experiments/sig-gen/src/: board.rs  config.rs  main.rs  rt_loop.rs
firmware/experiments/whirl-rig/: Cargo.toml  README.md  memory.x
firmware/experiments/whirl-rig/src/: board.rs  config.rs  main.rs  rig.rs  rt_loop.rs  telemetry.rs
firmware/src/: board.rs  config.rs  main.rs  params.rs  rt_loop.rs
firmware/src/comms/: mod.rs  tcp.rs  udp.rs
firmware/tools/: check_rt_layout.py  overrun_matrix.py  rt_regression.py
helic-broker/: Cargo.toml  README.md
helic-broker/src/: config.rs  history.rs  lib.rs  main.rs  server.rs  storage.rs
helic-broker/tests/: end_to_end.rs
helic-core/: Cargo.toml
helic-core/src/: controller.rs  filter.rs  generator.rs  lib.rs  lut.rs  phase.rs  pid.rs  rpm.rs  safety.rs  table.rs
helic-drivers/: Cargo.toml
helic-drivers/src/: ad5064.rs  ad7609.rs  lib.rs  optoncdt.rs  pwm_out.rs  ssi.rs
helic-proto/: Cargo.toml
helic-proto/src/: beacon.rs  broker.rs  crc.rs  frame.rs  lib.rs  payload.rs  stream.rs
host/: README.md  pyproject.toml
host-julia/: Project.toml  README.md
host-julia/src/: HelicDAQ.jl  device.jl  discovery.jl  protocol.jl  stream.jl
host-julia/test/: device.jl  discovery.jl  protocol.jl  runtests.jl  stream.jl
host-matlab/: README.md  runTests.m
host-matlab/+helicdaq/: Contents.m  Device.m  Protocol.m  StreamReceiver.m  findDevices.m
host-matlab/tests/: TestDevice.m  TestDiscovery.m  TestProtocol.m  TestStream.m
host-matlab/tests/helpers/: FakeCaptureReceiver.m  FakeDatagramTransport.m  FakeDiscoveryTransport.m  FakeTransport.m
host-python/: README.md
host-python/helic_daq/: __init__.py  cli.py  device.py  protocol.py  sim.py  stream.py
host-python/tests/: test_device.py  test_protocol.py  test_sim.py  test_stream.py
host/cbc_daq/: __init__.py  cli.py  device.py  protocol.py  stream.py
host/helic_daq/: __init__.py  cli.py  device.py  discovery.py  protocol.py  sim.py  stream.py
host/tests/: emulator.py  test_device.py  test_protocol.py  test_sim.py  test_stream.py
