[workspace]
resolver = "2"
members = ["common", "experiments/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
helic-core = { path = "../helic-core" }
helic-drivers = { version = "0.1.0", path = "../helic-drivers" }
helic-proto = { path = "../helic-proto" }
helic-fw-common = { path = "common" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.1.1"
defmt-rtt = "1.3.0"
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = ["medium-ethernet", "proto-ipv4", "tcp", "udp", "defmt"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = ["rp235xa", "defmt", "time-driver", "critical-section-impl", "unstable-pac"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = "0.7.0"
fixed = "1.31.0"
heapless = "0.9.3"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
pio = "0.3.0"
rand_core = "0.10.1"
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
