[package]
name = "helic-broker"
description = "Loopback-only multi-client broker with optional recording for HELIC-DAQ"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
helic-proto = { path = "../helic-proto" }
rust-hdf5 = { version = "0.3.2", default-features = false }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.47", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
tempfile = "3.20"
