[package]
name = "helic-drivers"
description = "Peripheral drivers for HELIC-DAQ (AD7609 ADC, AD5064 DAC, OptoNCDT laser sensor), generic over embedded-hal traits and host-testable"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
diag-rt-sram = []

[dependencies]
embedded-hal = "1"
