[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cbc-daq"
version = "0.1.0"
description = "Host interface for the CBC-DAQ real-time control and data acquisition platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "David A. W. Barton" }]
dependencies = ["numpy"]

[project.optional-dependencies]
plot = ["matplotlib"]

[project.scripts]
cbc-daq = "cbc_daq.cli:main"

[tool.setuptools.packages.find]
include = ["cbc_daq*"]
