[package]
name = "helic-fw-common"
description = "Experiment-independent firmware support for HELIC-DAQ"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["net-wiznet-w5500"]
net-cyw43 = ["dep:cyw43", "dep:cyw43-firmware", "dep:cyw43-pio", "dep:cyw43-setup"]
net-wiznet = ["dep:embassy-net-wiznet", "dep:embedded-hal-bus"]
net-wiznet-w5500 = ["net-wiznet"]
net-wiznet-w6100 = ["net-wiznet"]
diag-skip-record-enqueue = []
diag-rt-sram = ["helic-core/diag-rt-sram", "helic-drivers/diag-rt-sram"]

[dependencies]
helic-core.workspace = true
helic-drivers.workspace = true
helic-proto.workspace = true
cyw43 = { workspace = true, optional = true }
cyw43-firmware = { workspace = true, optional = true }
cyw43-pio = { workspace = true, optional = true }
cyw43-setup = { workspace = true, optional = true }
defmt.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-net-wiznet = { workspace = true, optional = true }
embassy-rp.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-hal-bus = { workspace = true, optional = true }
embedded-io-async.workspace = true
fixed.workspace = true
heapless.workspace = true
pio.workspace = true
rand_core.workspace = true
static_cell.workspace = true
