[package]
name = "fw-cbc-rig"
description = "HELIC-DAQ firmware for the CBC instrument"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["board-w5500"]
board-w5500 = ["helic-fw-common/net-wiznet-w5500"]
board-w6100 = ["helic-fw-common/net-wiznet-w6100"]

[dependencies]
helic-core.workspace = true
helic-drivers.workspace = true
helic-proto.workspace = true
helic-fw-common = { workspace = true, features = ["net-wiznet"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-embedded-hal.workspace = true
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-net.workspace = true
embassy-rp.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-hal.workspace = true
embedded-hal-bus.workspace = true
embedded-io-async.workspace = true
fixed.workspace = true
heapless.workspace = true
panic-probe.workspace = true
rand_core.workspace = true
static_cell.workspace = true
