[package]
name = "fw-cbc-rig"
description = "HELIC-DAQ firmware for the CBC instrument"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Select exactly one physical WIZnet chip. Features configure common network
# plumbing at compile time and do not create run-time transport dispatch.
default = ["board-w5500"]
board-w5500 = ["helic-fw-common/net-wiznet-w5500"]
board-w6100 = ["helic-fw-common/net-wiznet-w6100"]
diag-no-status-log = []
diag-no-udp = []
diag-sample-4k = []
diag-skip-adc = []
diag-skip-dac = []
diag-skip-record-enqueue = ["helic-fw-common/diag-skip-record-enqueue"]
diag-rt-sram = ["helic-fw-common/diag-rt-sram"]
diag-wiznet-10mhz = []

[dependencies]
# Versions are inherited from the firmware workspace so all experiment
# binaries use one tested Embassy/RP2350 dependency set.
helic-core.workspace = true
helic-drivers.workspace = true
helic-proto.workspace = true
helic-fw-common = { workspace = true, features = ["net-wiznet"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-embedded-hal.workspace = true
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-net.workspace = true
embassy-rp.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-hal.workspace = true
embedded-hal-bus.workspace = true
embedded-io-async.workspace = true
fixed.workspace = true
heapless.workspace = true
panic-probe.workspace = true
rand_core.workspace = true
static_cell.workspace = true
