[package]
name = "fw-pwm-rig"
description = "HELIC-DAQ firmware with filtered PWM analogue output"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helic-core.workspace = true
helic-drivers.workspace = true
helic-proto.workspace = true
helic-fw-common.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-rp.workspace = true
embassy-time.workspace = true
fixed.workspace = true
heapless.workspace = true
panic-probe.workspace = true
static_cell.workspace = true
