[package]
name = "fw-sig-gen-w"
description = "HELIC-DAQ firmware for wireless signal generation and laser logging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helic-core.workspace = true
helic-drivers.workspace = true
helic-proto.workspace = true
helic-fw-common = { workspace = true, default-features = false, features = ["net-cyw43"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
cyw43.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-rp.workspace = true
embassy-time.workspace = true
embedded-hal-bus.workspace = true
heapless.workspace = true
panic-probe.workspace = true
static_cell.workspace = true
