[package]
name = "fw-sig-gen"
description = "HELIC-DAQ firmware for signal generation and laser logging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helic-core.workspace = true
helic-drivers.workspace = true
helic-proto.workspace = true
helic-fw-common.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-rp.workspace = true
embassy-time.workspace = true
embedded-hal-bus.workspace = true
heapless.workspace = true
panic-probe.workspace = true
static_cell.workspace = true
