[package]
name = "fw-sig-gen"
description = "HELIC-DAQ firmware for signal generation and laser logging"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Select exactly one physical WIZnet chip at compile time.
default = ["board-w5500"]
board-w5500 = ["helic-fw-common/net-wiznet-w5500"]
board-w6100 = ["helic-fw-common/net-wiznet-w6100"]

[dependencies]
# Versions come from the parent firmware workspace for consistent builds.
helic-core.workspace = true
helic-drivers.workspace = true
helic-proto.workspace = true
helic-fw-common = { workspace = true, features = ["net-wiznet"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-rp.workspace = true
embassy-time.workspace = true
embedded-hal-bus.workspace = true
heapless.workspace = true
panic-probe.workspace = true
static_cell.workspace = true
